apps/windmill/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: windmill
  labels:
    name: windmill
    pod-security.kubernetes.io/enforce: privileged
