apps/windmill/statefulset-windmill-postgres.yaml
# yamllint disable rule:line-length
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: windmill-postgresql
  namespace: windmill
spec:
  serviceName: windmill-postgresql
  replicas: 1
  selector:
    matchLabels:
      app: windmill-postgresql
  template:
    metadata:
      labels:
        app: windmill-postgresql
    spec:
      containers:
        - name: postgres
          image: postgres:17
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 1Gi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: windmill-postgres-data
---
apiVersion: v1
kind: Service
metadata:
  name: windmill-postgresql
  namespace: windmill
spec:
  selector:
    app: windmill-postgresql
  ports:
    - port: 5432
      targetPort: 5432
