apps/windmill/ingressroute-windmill.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: windmill
  namespace: windmill
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`windmill.xrs444.net`)
      kind: Rule
      services:
        - name: windmill-app
          port: 8000
  tls:
    secretName: letsencrypt-wildcard-cert-xrs444.net
